--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "compact-prediction-tree",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Compact prediction Trees for Javascript",
   "main": "dist/index.js",
   "types": "dist/declarations/index.d.ts",
@@ -13,7 +13,9 @@
     "compact prediction tree",
     "sequence",
     "prediciton",
-    "machine learning"
+    "machine learning",
+    "compact",
+    "tree"
   ],
   "author": "ashubham@gmail.com",
   "license": "MIT",
